# statsbomb_open_data_fun

./: README.md  pyproject.toml
data/: constants.py
poss_adjust_project/: 01_collect_def_events.py  02_save_aggregated_data.py  03_save_team_aggregated_data.py  README.md  data_exploration.md  data_exploration_pt2.md
poss_adjust_project/data/: aggregated_data.csv  aggregated_data_teams_sequences.csv
sb_data_pipeline/: 01_save_sb_season_matches_data.py  02_proto_pipeline.py  README.md  dataclasses.py  temp_utils.py  utils.py
